<resources>
    <string name="app_name">SQLite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_information">Add Information</string>
    <string name="show_information">Show Information</string>
    <string name="delete_information">Delete Information</string>
    <string name="update_information">Update Information</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="add">Add</string>
    <string name="data_s_will_appear_here">Data\'s will appear here</string>
    <string name="update">Update</string>
    <string name="enter_id">Enter Id</string>
    <string name="delete">Delete</string>

</resources>
